--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@ html {
   --background-color-footer: grey;
   --alt-background-color: #000000;
   --background-color-holding-page: #f0f0c9;
-  --h1-color: #22256c;
+  --h1-color: #d74e09;
   --h2-color: #d31919;
   --h3-color: #38429b;
   --h4-color: #d31919;
