--- a/styles/style.css
+++ b/styles/style.css
@@ -87,9 +87,9 @@ html {
   --background-color-footer: grey;
   --alt-background-color: #000000;
   --background-color-holding-page: #f0f0c9;
-  --h1-color: #d74e09;
+  --h1-color: #f0f0c9;
   --h2-color: #d31919;
-  --h3-color: #38429b;
+  --h3-color: #d74e09;
   --h4-color: #d31919;
   --h5-color: #d31919;
   --h6-color: #d31919;
