--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ html {
   --hover-color: #708090;
   --visited-color: #708090;
   --project-title-color: #d31919;
-  --project-sidebar-background-color: #f0f0c9
+  --project-sidebar-background-color: #f0f0c9;
   --project-sidebar-text-color: #d31919;
   --heart-color: #d31919;
   --holding-page-footer-color: #fffcef;
