erm still fixing this ugh

--- a/styles/style.css
+++ b/styles/style.css
@@ -83,22 +83,22 @@ html {
   --project-title-typeface: "Work Sans", sans-serif;
   --subtitle-typeface: "Work Sans", sans-serif;
   --background-color: #124e78;
-  --background-color-about: #fffcef;
-  --background-color-footer: grey;
+  --background-color-about: #f0f0c9;
+  --background-color-footer: #124e78;
   --alt-background-color: #000000;
   --background-color-holding-page: #f0f0c9;
   --h1-color: #f0f0c9;
-  --h2-color: #d31919;
-  --h3-color: #d74e09;
-  --h4-color: #d31919;
-  --h5-color: #d31919;
-  --h6-color: #d31919;
-  --primary-text-color: #6e0e0a;
+  --h2-color: #f0f0c9;
+  --h3-color: #f0f0c9;
+  --h4-color: #f0f0c9;
+  --h5-color: #f0f0c9;
+  --h6-color: #f0f0c9;
+  --primary-text-color: #f0f0c9;
   --holding-page-title-color: #d31919;
-  --accent-color: #c15f06;
-  --overlay-color: #ffd601;
-  --overlay-title-color: #38429b;
-  --overlay-description-color: #22256c;
+  --accent-color: #f2bb05;
+  --overlay-color: #f0f0c9;
+  --overlay-title-color: #124e78;
+  --overlay-description-color: #124e78;
   --hyperlink-color: #d31919;
   --logo-hover-color: #d31919;
   --hyperlink-alternate-color: orangered;
