--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ html {
   --h6-color: #f0f0c9;
   --primary-text-color: #f0f0c9;
   --holding-page-title-color: #d31919;
-  --accent-color: #f2bb05;
+  --accent-color: #f24333;
   --overlay-color: #f0f0c9;
   --overlay-title-color: #124e78;
   --overlay-description-color: #124e78;
