--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ html {
   --heading-typeface: "Work Sans", sans-serif;
   --project-title-typeface: "Work Sans", sans-serif;
   --subtitle-typeface: "Work Sans", sans-serif;
-  --background-color: #5762d5;
+  --background-color: #2c51d7;
   --background-color-about: #f0f0c9;
   --background-color-footer: #5762d5;
   --alt-background-color: #000000;
