--- a/styles/style.css
+++ b/styles/style.css
@@ -533,7 +533,7 @@ background-size: cover;
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: 0.75s ease;
+  transition: 1s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
