--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@ html {
   --subtitle-typeface: "Work Sans", sans-serif;
   --background-color: #2c51d7;
   --background-color-about: #f0f0c9;
-  --background-color-footer: #5762d5;
+  --background-color-footer: #2c51d7;
   --alt-background-color: #000000;
   --background-color-holding-page: #f0f0c9;
   --h1-color: #f0f0c9;
