--- a/styles/style.css
+++ b/styles/style.css
@@ -103,7 +103,7 @@ html {
   --logo-hover-color: #d31919;
   --hyperlink-alternate-color: orangered;
   --hover-color: #f24333;
-  --visited-color: #708090;
+  --visited-color: #698aff;
   --project-title-color: #f0f0c9;
   --project-sidebar-background-color: #f0f0c9;
   --project-sidebar-text-color: #f0f0c9;
