--- a/styles/style.css
+++ b/styles/style.css
@@ -96,7 +96,7 @@ html {
   --primary-text-color: #f0f0c9;
   --holding-page-title-color: #d31919;
   --accent-color: #f24333;
-  --overlay-color: #f0f0c9;
+  --overlay-color: linear-gradient (#2c51d7, #f0f0c9);
   --overlay-title-color: #2c51d7;
   --overlay-description-color: #124e78;
   --hyperlink-color: #f0f0c9;
@@ -458,10 +458,6 @@ background-size: cover;
 .hero-background {
   background-size: 400% 400%;
   height: 100vh;
-}
-
-.fade-in-photo {
-  animation: enter-animation 0.8s 1;
 }
 
 @keyframes enter-animation {
