--- a/styles/style.css
+++ b/styles/style.css
@@ -422,7 +422,7 @@ background-size: cover;
 }
 
 .logo {
-  width: 3rem;
+  width: 1rem;
   /* TODO: Adjust the width of the logo on mobile devices here. */
 }
 
@@ -474,6 +474,10 @@ background-size: cover;
   .image-animation {
     animation: enter-animation 0.8s 1;
   }
+}
+
+.image-work-page {
+  filter: grayscale(100%);
 }
 
 /* Work Page Layout
@@ -546,8 +550,8 @@ background-size: cover;
 }
 
 .work-page-grid-item:hover .overlay {
-  visibility:
-  opacity: 0.9; 
+  visibility: visible;
+  opacity: 0.9;
 }
 .photo > img {
   object-fit: cover;
@@ -897,7 +901,7 @@ background-size: cover;
   }
 
   .logo {
-    width: 8rem;
+    width: 4rem;
     transition: 200ms;
     transition-timing-function: ease-in-out;
   }
