updating visual styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -88,18 +88,18 @@ html {
   --alt-background-color: #000000;
   --background-color-holding-page: #f0f0c9;
   --h1-color: #f0f0c9;
-  --h2-color: #f0f0c9;
+  --h2-color: #2c51d7;
   --h3-color: #f0f0c9;
   --h4-color: #f0f0c9;
   --h5-color: #f0f0c9;
   --h6-color: #f0f0c9;
-  --primary-text-color: #f0f0c9;
+  --primary-text-color: #2c51d7;
   --holding-page-title-color: #d31919;
   --accent-color: #f24333;
   --overlay-color: #f0f0c9;
   --overlay-title-color: #2c51d7;
   --overlay-description-color: #124e78;
-  --hyperlink-color: #f0f0c9;
+  --hyperlink-color: #f24333;
   --logo-hover-color: #d31919;
   --hyperlink-alternate-color: orangered;
   --hover-color: #f24333;
@@ -325,6 +325,10 @@ a:active {
   background-position: center center;
 }
 
+.custom-navigation {
+  padding-top: 1rem;
+}
+
 .heart {
   color: var(--heart-color);
 }
@@ -419,6 +423,9 @@ background-size: cover;
   justify-content: space-between;
   padding: 2rem;
   align-items: flex-start;
+  background-color: #f0f0c9;
+  margin: 2.5rem;
+  border-radius: 20rem;
 }
 
 .logo {
@@ -478,6 +485,7 @@ background-size: cover;
 
 .image-work-page {
   filter: grayscale(100%);
+  border-radius: 3rem;
 }
 
 /* Work Page Layout
@@ -514,6 +522,7 @@ background-size: cover;
   width: 100%;
   height: auto;
   position: relative;
+  border-radius: 20rem;
   /* Required to contain overlay size */
 }
 
@@ -551,7 +560,7 @@ background-size: cover;
 
 .work-page-grid-item:hover .overlay {
   visibility: visible;
-  opacity: 0.9;
+  opacity: 1;
 }
 .photo > img {
   object-fit: cover;
@@ -618,6 +627,9 @@ background-size: cover;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-bottom: 1rem;
+  background-color: #f0f0c9;
+  margin: 2.5rem;
+  border-radius: 20rem;
 }
 
 .footer-item-1 {
@@ -642,6 +654,7 @@ background-size: cover;
 .footer-item-4 {
   grid-column: 1 / 2;
   grid-row: 4 / 5;
+  margin-top: 2rem;
 }
 
 .footer-item-5 {
@@ -939,6 +952,8 @@ background-size: cover;
   .about {
     padding: 4rem;
     grid-template-columns: 1fr 1fr 1fr;
+    border-radius: 15rem;
+    margin: 2.5rem;
   }
 
   .global-footer {
