massive updates for visuals

--- a/styles/style.css
+++ b/styles/style.css
@@ -505,8 +505,12 @@ background-size: cover;
 /* Padding around work grid and project page */
 .portfolio,
 .project-wrapper {
-  padding: 0.25rem;
+  padding: 1rem;
+  background-color: #f0f0c9;
+  margin: 2.5rem;
+  border-radius: 10rem;
   align-items: center;
+  justify-content: center;
 }
 
 /* Defining the work page grid */
@@ -515,6 +519,9 @@ background-size: cover;
   grid-template-columns: repeat(auto-fit, minmax(900px, 1fr));
   grid-gap: 1rem;
   object-fit: contain;
+  padding-bottom: 10rem;
+  align-items: center;
+  justify-content: center;
   /* Magical, media-query-less responsiveness is achieved using the repeat() function and the auto placement keywords. To achieve wrapping, we can use the auto-fit. If you're using auto-fit, the content will stretch to fill the entire row width.  Specify a minimum width for the columns, using the minmax() function. The 1fr is what tells the browser to distribute the space between the columns so that each column equally gets one fraction of that space.  */
 }
 
