--- a/styles/style.css
+++ b/styles/style.css
@@ -473,6 +473,7 @@ background-size: cover;
   flex-direction: row;
   justify-content: space-between;
   padding: 1rem;
+  margin: 2rem;
 }
 
 .hero-background {
@@ -601,31 +602,50 @@ background-size: cover;
 
 .about {
   display: grid;
-  grid-template-columns: 1fr;
   grid-gap: 3rem;
-  background: var(--background-color-about);
-  padding: 1rem;
   flex: 1;
+  padding: 4rem;
+  align-items: baseline;
+  grid-template-columns: 1fr 1fr 1fr;
+  border-radius: 15rem;
+  margin: 2.5rem;
 }
 
 .about-item-1 {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  background: var(--background-color-about);
+  border-radius: 2rem;
+  padding: 2rem;
 }
 
 .about-item-2 {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
+  background: var(--background-color-about);
+  border-radius: 2rem;
+  padding: 2rem;
 }
 
 .about-item-3 {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
+  background: var(--background-color-about);
+  border-radius: 2rem;
+  padding: 2rem;
 }
 
 .about-item-4 {
+  margin: 1rem;
   grid-column: 1 / 2;
   grid-row: 4 / 5;
+  background: var(--background-color-about);
+  border-radius: 2rem;
+}
+
+.about-image {
+  background-size: contain;
+  border-radius: 100%;
 }
 
 /* Global Footer
@@ -978,6 +998,10 @@ background-size: cover;
   }
 
   .about {
+    display: grid;
+    grid-gap: 3rem;
+    flex: 1;
+    align-items: baseline;
     padding: 4rem;
     grid-template-columns: 1fr 1fr 1fr;
     border-radius: 15rem;
@@ -999,6 +1023,8 @@ background-size: cover;
   .about-item-1 {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    background: var(--background-color-about);
+    border-radius: 2rem;
   }
 
   .footer-item-1 {
@@ -1013,8 +1039,8 @@ background-size: cover;
   .about-item-2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
-    background-color: #f0f0c9;
-    border-radius: 10rem;
+    background: var(--background-color-about);
+    border-radius: 2rem;
   }
 
   .footer-item-2 {
@@ -1022,15 +1048,15 @@ background-size: cover;
     grid-column: 2 / 3;
     padding: 3rem;
     align-content: center;
-    background-color: #f0f0c9;
+    background: var(--background-color-about);
     border-radius: 10rem;
   }
 
   .about-item-3 {
     grid-row: 1 / 2;
     grid-column: 3 / 4;
-    background-color: #f0f0c9;
-    border-radius: 10rem;
+    background: var(--background-color-about);
+    border-radius: 2rem;
   }
 
   .footer-item-3 {
@@ -1038,7 +1064,7 @@ background-size: cover;
     grid-column: 3 / 4;
     padding: 3rem;
     align-content: center;
-    background-color: #f0f0c9;
+    background: var(--background-color-about);
     border-radius: 10rem;
   }
 
