--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ html {
   --project-title-typeface: "Work Sans", sans-serif;
   --subtitle-typeface: "Work Sans", sans-serif;
   --background-color: #2c51d7;
-  --background-color-about: #f0f0c9;
+  --background-color-about: white;
   --background-color-footer: #2c51d7;
   --alt-background-color: #000000;
   --background-color-holding-page: #f0f0c9;
@@ -93,14 +93,14 @@ html {
   --h4-color: #f0f0c9;
   --h5-color: #f0f0c9;
   --h6-color: #f0f0c9;
-  --primary-text-color: #2c51d7;
+  --primary-text-color: black;
   --holding-page-title-color: #2c51d7;
   --accent-color: #f24333;
-  --overlay-color: #f0f0c9;
-  --overlay-title-color: #2c51d7;
-  --overlay-description-color: #124e78;
+  --overlay-color: #f24333;
+  --overlay-title-color: white;
+  --overlay-description-color: white;
   --hyperlink-color: #f24333;
-  --logo-hover-color: #d31919;
+  --logo-hover-color: #f24333;
   --hyperlink-alternate-color: orangered;
   --hover-color: #f24333;
   --visited-color: #698aff;
@@ -174,11 +174,12 @@ h1 {
 }
 
 h2 {
-  font-size: 2.25rem;
+  font-size: 3rem;
   font-family: var(--heading-typeface);
   font-weight: thin;
   margin-bottom: 1rem;
   color: var(--h2-color);
+  text-align: center;
 }
 
 h3 {
@@ -244,6 +245,13 @@ em {
 
 .overlay-description {
   color: var(--overlay-description-color);
+}
+
+.work-title {
+  font-size: 7rem;
+  margin-bottom: 5rem;
+  font-weight: 200;
+  color: var(--h2-color);
 }
 
 /*
@@ -331,7 +339,7 @@ a:active {
   padding-bottom: 1.5rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  background-color: #f0f0c9;
+  background-color: var(--background-color-about);
   border-radius: 5rem;
 }
 
@@ -358,7 +366,7 @@ a:active {
 }
 
 .project-title {
-  font-size: 7rem;
+  font-size: 6rem;
   line-height: 1.2;
   font-family: var(--project-title-typeface);
   color: var(--project-title-color);
@@ -378,7 +386,7 @@ a:active {
   text-transform: uppercase;
 }
 .project-description {
-  font-size: 1.525rem;
+  font-size: 1.21rem;
   line-height: 1.4;
   text-align: center;
   width: 60%;
@@ -535,7 +543,7 @@ background-size: cover;
   grid-gap: 1rem;
   object-fit: contain;
   padding-bottom: 7rem;
-  padding-top: 10rem;
+  padding-top: 3rem;
   align-items: center;
   justify-content: center;
   /* Magical, media-query-less responsiveness is achieved using the repeat() function and the auto placement keywords. To achieve wrapping, we can use the auto-fit. If you're using auto-fit, the content will stretch to fill the entire row width.  Specify a minimum width for the columns, using the minmax() function. The 1fr is what tells the browser to distribute the space between the columns so that each column equally gets one fraction of that space.  */
@@ -601,11 +609,13 @@ background-size: cover;
 */
 
 .about {
-  display: grid;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
   grid-gap: 3rem;
   flex: 1;
   padding: 4rem;
-  align-items: baseline;
+  align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   border-radius: 15rem;
   margin: 2.5rem;
@@ -636,11 +646,13 @@ background-size: cover;
 }
 
 .about-item-4 {
-  margin: 1rem;
-  grid-column: 1 / 2;
-  grid-row: 4 / 5;
-  background: var(--background-color-about);
-  border-radius: 2rem;
+  grid-row: 2 / 3;
+  grid-column: 1 / 4;
+  padding: 2rem;
+  text-align: center;
+  align-self: end;
+  background-color: #f0f0c9;
+  border-radius: 5rem;
 }
 
 .about-image {
@@ -666,7 +678,7 @@ background-size: cover;
   min-height: 50vh;
   max-height: 50vh;
   background: var(--background-color-footer);
-  background-color: #f0f0c9;
+  background-color: white;
   margin: 2.5rem;
   border-radius: 15rem;
 }
@@ -831,24 +843,6 @@ background-size: cover;
   background-color: var(--background-color-about);
   border-radius: 5rem;
   padding: 0 2rem 0 2rem;
-  border-right: 5px solid;
-  white-space: nowrap;
-  overflow: hidden;
-  animation: typing 2s steps(20) cursor 0.4s step-end infinite alternate;
-}
-
-/*cursor blinking*/
-@keyframes cursor {
-  50% {
-    border-color: transparent;
-  }
-}
-
-/*typing effect*/
-@keyframes typing {
-  from {
-    width: 0;
-  }
 }
 
 .holding-page-inner-container {
@@ -982,9 +976,13 @@ background-size: cover;
   }
 
   .logo {
-    width: 4rem;
+    width: 6rem;
     transition: 200ms;
     transition-timing-function: ease-in-out;
+  }
+
+  .logo:hover {
+    color: var(--logo-hover-color);
   }
 
   .hero {
@@ -1021,7 +1019,7 @@ background-size: cover;
     display: grid;
     grid-gap: 3rem;
     flex: 1;
-    align-items: baseline;
+    align-items: stretch;
     padding: 4rem;
     grid-template-columns: 1fr 1fr 1fr;
     border-radius: 15rem;
@@ -1052,7 +1050,7 @@ background-size: cover;
     grid-row: 1 / 2;
     padding: 3rem;
     align-content: center;
-    background-color: #f0f0c9;
+    background-color: var(--background-color-about);
     border-radius: 10rem;
   }
 
@@ -1094,8 +1092,8 @@ background-size: cover;
     padding: 2rem;
     text-align: center;
     align-self: end;
-    background-color: #f0f0c9;
-    border-radius: 10rem;
+    background-color: var(--background-color-about);
+    border-radius: 5rem;
   }
 
   .footer-item-4 {
@@ -1104,7 +1102,7 @@ background-size: cover;
     padding-top: 1rem;
     align-content: center;
     align-self: end;
-    background-color: #f0f0c9;
+    background-color: var(--background-color-about);
     border-radius: 10rem;
   }
 
@@ -1112,7 +1110,7 @@ background-size: cover;
   .portfolio,
   .project-wrapper {
     padding: 2rem;
-    background-color: #f0f0c9;
+    background-color: white;
     margin: 0, 2.5rem;
     border-radius: 10rem;
     align-items: center;
