--- a/styles/style.css
+++ b/styles/style.css
@@ -87,12 +87,12 @@ html {
   --background-color-footer: #2c51d7;
   --alt-background-color: #000000;
   --background-color-holding-page: #f0f0c9;
-  --h1-color: #f0f0c9;
+  --h1-color: white;
   --h2-color: #2c51d7;
-  --h3-color: #f0f0c9;
-  --h4-color: #f0f0c9;
-  --h5-color: #f0f0c9;
-  --h6-color: #f0f0c9;
+  --h3-color: white;
+  --h4-color: white;
+  --h5-color: white;
+  --h6-color: white;
   --primary-text-color: black;
   --holding-page-title-color: #2c51d7;
   --accent-color: #f24333;
@@ -1103,7 +1103,11 @@ background-size: cover;
     align-content: center;
     align-self: end;
     background-color: var(--background-color-about);
-    border-radius: 10rem;
+    border-radius: 8rem;
+  }
+
+  .footer-click {
+    margin-bottom: 3rem;
   }
 
   /* Padding around work grid and project page */
