--- a/styles/style.css
+++ b/styles/style.css
@@ -1023,7 +1023,7 @@ background-size: cover;
     flex: 1;
     align-items: stretch;
     padding: 4rem;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     border-radius: 15rem;
     margin: 2.5rem;
   }
@@ -1070,13 +1070,6 @@ background-size: cover;
     align-content: center;
     background: var(--background-color-about);
     border-radius: 10rem;
-  }
-
-  .about-item-3 {
-    grid-row: 1 / 2;
-    grid-column: 3 / 4;
-    background: var(--background-color-about);
-    border-radius: 2rem;
   }
 
   .footer-item-3 {
