--- a/styles/style.css
+++ b/styles/style.css
@@ -529,9 +529,9 @@ background-size: cover;
 .portfolio,
 .project-wrapper {
   padding: 2rem;
-  background-color: #f0f0c9;
+  background-color: white;
   margin: 0, 2.5rem;
-  border-radius: 10rem;
+  border-radius: 3rem;
   align-items: center;
   justify-content: center;
 }
@@ -911,7 +911,7 @@ background-size: cover;
 /* Medium devices (tablets, 768px and up) */
 
 /*typography*/
-@media (min-width: 200px) {
+@media (min-width: 300px) {
   h1 {
     font-size: 4rem;
     line-height: 4rem;
@@ -991,29 +991,6 @@ background-size: cover;
     color: var(--h2-color);
   }
   /*a*/
-  a:link {
-    color: var(--hyperlink-color);
-    text-decoration: none;
-  }
-
-  a:visited {
-    color: var(--visited-color);
-  }
-
-  a:hover {
-    color: var(--hover-color);
-    text-decoration: underline;
-    transition: linear;
-  }
-
-  a:focus {
-    outline: 1px solid var(--accent-color);
-  }
-
-  a:active {
-    color: var(--hover-color);
-    /* Tap on mobile */
-  }
 
   .logo {
     width: 3rem;
@@ -1035,6 +1012,179 @@ background-size: cover;
     text-align: center;
   }
 }
+
+.portfolio,
+.project-wrapper {
+  padding: 2rem;
+  background-color: white;
+  margin: 0, 2.5rem;
+  border-radius: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+/*copying over from larger screens*/
+.hero {
+  min-height: 50vh;
+}
+
+.hero-headline-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 4rem;
+  text-align: center;
+  height: 100vh;
+}
+
+.grid {
+  grid-template-columns: repeat(auto-fit, minmax(990px, 1fr));
+  grid-gap: 1rem;
+}
+
+/* Grayscale filter with full-colour on hover and tap */
+.work-page-grid-item a.grayscale img {
+  filter: grayscale(100);
+}
+
+.work-page-grid-item > a.grayscale:active img,
+.work-page-grid-item > a.grayscale:hover img {
+  filter: grayscale(0);
+}
+
+.about {
+  display: grid;
+  grid-gap: 3rem;
+  flex: 1;
+  align-items: stretch;
+  padding: 4rem;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 15rem;
+  margin: 2.5rem;
+}
+
+.global-footer {
+  padding: 4rem 4rem 0 4rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  display: grid;
+  grid-gap: 3rem;
+  min-height: 50vh;
+  max-height: 50vh;
+  background: var(--background-color-footer);
+  margin: 2.5rem;
+  border-radius: 15rem;
+}
+
+.about-item-1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  background: var(--background-color-about);
+  border-radius: 2rem;
+}
+
+.footer-item-1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  padding: 3rem;
+  align-content: center;
+  background-color: var(--background-color-about);
+  border-radius: 10rem;
+}
+
+.about-item-2 {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  background: var(--background-color-about);
+  border-radius: 2rem;
+  padding: 6rem;
+}
+
+.footer-item-2 {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  padding: 3rem;
+  align-content: center;
+  background: var(--background-color-about);
+  border-radius: 10rem;
+}
+
+.footer-item-3 {
+  grid-row: 1 / 2;
+  grid-column: 3 / 4;
+  padding: 3rem;
+  align-content: center;
+  background: var(--background-color-about);
+  border-radius: 10rem;
+}
+
+.about-item-4 {
+  grid-row: 2 / 3;
+  grid-column: 1 / 4;
+  padding: 2rem;
+  text-align: center;
+  align-self: end;
+  background-color: var(--background-color-about);
+  border-radius: 5rem;
+}
+
+.footer-item-4 {
+  grid-row: 2 / 3;
+  grid-column: 1 / 4;
+  padding-top: 1rem;
+  align-content: center;
+  align-self: end;
+  background-color: var(--background-color-about);
+  border-radius: 8rem;
+}
+
+.footer-click {
+  margin-bottom: 3rem;
+}
+
+/* Project Page Flex Direction on Large Devices */
+.project-wrapper {
+  flex-direction: column;
+  padding: 2rem;
+  padding-bottom: 10rem;
+}
+
+/* Sidebar on Large Devices */
+.project-aside {
+  width: 100%;
+  /* height: 65vh; */
+  /* position: -webkit-sticky;
+    position: sticky;
+    top: 5vh; */
+  padding-right: 2rem;
+}
+
+/* Main Project Image Area on Large Devices */
+.project-details {
+  width: 100%;
+}
+
+.project-image {
+  min-height: 70vh;
+  /* TODO: Delete min-height if you want to remove space between project images on project pages on large devices. It is used for the demo page only. */
+}
+
+.project-image-container {
+  flex-direction: row;
+}
+
+.project-navigation {
+  justify-content: flex-start;
+}
+
+.arrow {
+  padding-right: 1rem;
+}
+
+/*sections*/
+
+/*images*/
 
 @media (min-width: 600px) {
   h1 {
@@ -1210,13 +1360,11 @@ background-size: cover;
     margin-bottom: 3rem;
   }
 
-  /* Padding around work grid and project page */
   .portfolio,
   .project-wrapper {
     padding: 2rem;
     background-color: white;
-
-    border-radius: 10rem;
+    border-radius: 3rem;
     align-items: center;
     justify-content: center;
   }
