--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ html {
   scroll-behavior: smooth;
 }
 
+/*
 *,
 *:before,
 *:after {
@@ -1015,6 +1016,7 @@ background-size: cover;
 
 .portfolio,
 .project-wrapper {
+  width: 100%;
   padding: 2rem;
   background-color: white;
   margin: 0, 2.5rem;
@@ -1073,6 +1075,11 @@ background-size: cover;
 }
 
 .global-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+  /*
   padding: 1rem 1rem 0 1rem;
   grid-template-columns: 1fr;
   display: grid;
@@ -1081,19 +1088,20 @@ background-size: cover;
   max-height: 50vh;
   background: var(--background-color-footer);
   margin: 2.5rem;
-  border-radius: 15rem;
+  border-radius: 10rem;
+  */
 }
 
 .about-item-1 {
   grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  grid-row: 1 / 3;
   background: var(--background-color-about);
   border-radius: 2rem;
 }
 
 .footer-item-1 {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  grid-column: 1 / 1;
+  grid-row: 1 / 3;
   padding: 3rem;
   align-content: center;
   background-color: var(--background-color-about);
@@ -1109,8 +1117,8 @@ background-size: cover;
 }
 
 .footer-item-2 {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  grid-column: 1 / 1;
   padding: 3rem;
   align-content: center;
   background: var(--background-color-about);
@@ -1153,8 +1161,8 @@ background-size: cover;
 /* Project Page Flex Direction on Large Devices */
 .project-wrapper {
   flex-direction: column;
-  padding: 1rem;
-  padding-bottom: 5rem;
+  padding: 0.5rem;
+  padding-bottom: 3rem;
 }
 
 /* Sidebar on Large Devices */
